cmake_minimum_required(VERSION 3.17)
project(Game_of_Life)
set(CMAKE_CXX_STANDARD 14)
set(INC_DIR ./include)
set(LINK_DIR ./lib)
include_directories(${INC_DIR})
link_directories(${LINK_DIR})
add_executable(Game_of_Life main.cpp)
target_link_libraries(Game_of_Life EasyXa EasyXw VSCustomNativeHeapEtwProvider VsGraphicsHelper)
